tests/compile_fail/old_print_builtin/source.c
int main(void) {
    print(1);
    return 0;
}
